<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/CDRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3">

        <RadioButton
            android:id="@+id/CDRadioButtonSoda"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/soda" />

        <RadioButton
            android:id="@+id/CDRadioButtonWater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/water" />
    </RadioGroup>

    <Button
        android:id="@+id/CDButtonSaveDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/saveDrink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CDRadioGroup" />

    <TextView
        android:id="@+id/textView3"
        style="@style/Titles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseDrinkTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>