<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/MEditTextDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/MButtonChooseMeal" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TextViews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MButtonChooseMeal" />

    <EditText
        android:id="@+id/MEditTextMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/MButtonChooseDrink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseDrink"
        app:layout_constraintStart_toStartOf="@+id/MEditTextDrink"
        app:layout_constraintTop_toBottomOf="@+id/MEditTextDrink" />

    <Button
        android:id="@+id/MButtonChooseMeal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chooseMeal"
        app:layout_constraintStart_toStartOf="@+id/MEditTextMeal"
        app:layout_constraintTop_toBottomOf="@+id/MEditTextMeal" />
</androidx.constraintlayout.widget.ConstraintLayout>